--- a/docker/flex-gpu/docker-compose.yml
+++ b/docker/flex-gpu/docker-compose.yml
@@ -57,7 +57,7 @@ services:
   tf-ssd-mobilenet-inference:
     build:
       args:
-        MODEL_URL: ${MODEL_URL:-https://storage.googleapis.com/intel-optimized-tensorflow/models/gpu/ssd_mobilenet_v1_int8_itex.pb}   
+        MODEL_URL: ${MODEL_URL:-https://storage.googleapis.com/intel-optimized-tensorflow/models/gpu/ssd_mobilenet_v1_int8_itex.pb}
       dockerfile: docker/flex-gpu/tf-ssd-mobilenet-inference/tf-flex-series-ssd-mobilenet-inference.Dockerfile
     extends: tf-resnet50v1-5-inference
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-object-detection-tf-flex-gpu-ssd-mobilenet-inference
@@ -97,10 +97,20 @@ services:
     extends: pytorch-stable-diffusion-inference
     image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-language-modeling-pytorch-flex-gpu-distilbert-inference
   pytorch-unetpp-inference:
-    build: 
+    build:
       dockerfile: docker/flex-gpu/pytorch-unetpp-inference/pytorch-flex-series-unetpp-inference.Dockerfile
     extends: pytorch-stable-diffusion-inference
-    image:  ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-pytorch-flex-gpu-unetpp-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-image-segmentation-pytorch-flex-gpu-unetpp-inference
+  pytorch-quartznet-inference:
+    build:
+      dockerfile: docker/flex-gpu/pytorch-quartznet-inference/pytorch-flex-series-quartznet-inference.Dockerfile
+    extends: pytorch-stable-diffusion-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-recognition-pytorch-flex-gpu-quartznet-inference
+  pytorch-hifi-gan-inference:
+    build:
+      dockerfile: docker/flex-gpu/pytorch-hifi-gan-inference/pytorch-flex-series-hifi-gan-inference.Dockerfile
+    extends: pytorch-stable-diffusion-inference
+    image: ${REGISTRY}/aiops/mlops-ci:b-${GITHUB_RUN_NUMBER:-0}-speech-generation-pytorch-flex-gpu-hifi-gan-inference
   pytorch-fast-pitch-inference:
     build:
       dockerfile: docker/flex-gpu/pytorch-fast-pitch-inference/pytorch-flex-series-fast-pitch-inference.Dockerfile
