--- a/datasets/dataset_api/conda/recipe/meta.yaml
+++ b/datasets/dataset_api/conda/recipe/meta.yaml
@@ -1,9 +1,6 @@
-{% set name = "dataset_librarian" %}
-{% set version = "1.0.4" %}
-
 package:
-  name: {{ name|lower }}
-  version: {{ version }}
+  name: "dataset_librarian"
+  version: "1.0.4"
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/dataset_librarian-{{ version }}.tar.gz
@@ -11,7 +8,8 @@ source:
 
 build:
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: |
+    {{ PYTHON }} -m pip install . -vv
   number: 0
 
 requirements:
