--- a/models/object_detection/pytorch/maskrcnn/maskrcnn-benchmark/configs/e2e_mask_rcnn_R_50_FPN_1x_coco2017_tra.yaml
+++ b/models/object_detection/pytorch/maskrcnn/maskrcnn-benchmark/configs/e2e_mask_rcnn_R_50_FPN_1x_coco2017_tra.yaml
@@ -6,14 +6,14 @@ MODEL:
   RESNETS:
     BACKBONE_OUT_CHANNELS: 256
   RPN:
-    USE_FPN: True
+    USE_FPN: true
     ANCHOR_STRIDE: (4, 8, 16, 32, 64)
     PRE_NMS_TOP_N_TRAIN: 2000
     PRE_NMS_TOP_N_TEST: 1000
     POST_NMS_TOP_N_TEST: 1000
     FPN_POST_NMS_TOP_N_TEST: 1000
   ROI_HEADS:
-    USE_FPN: True
+    USE_FPN: true
   ROI_BOX_HEAD:
     POOLER_RESOLUTION: 7
     POOLER_SCALES: (0.25, 0.125, 0.0625, 0.03125)
@@ -27,8 +27,8 @@ MODEL:
     POOLER_RESOLUTION: 14
     POOLER_SAMPLING_RATIO: 2
     RESOLUTION: 28
-    SHARE_BOX_FEATURE_EXTRACTOR: False
-  MASK_ON: True
+    SHARE_BOX_FEATURE_EXTRACTOR: false
+  MASK_ON: true
 DATASETS:
   TRAIN: ("coco_2017_train", "coco_2017_val")
   TEST: ("coco_2017_val",)
