--- a/models_v2/pytorch/yolov5/inference/gpu/tests.yaml
+++ b/models_v2/pytorch/yolov5/inference/gpu/tests.yaml
@@ -1,7 +1,9 @@
 #Just a single baseline test for baremetal functionality.
 #Majority of functional coverage is in docker container tests.
 bs001-s1-fp16-yolov5:
-  cmd: bash $TEST_SCRIPTS/setup.sh ${FRAMEWORK_VERSION} ${FRAMEWORK_EXTENSION_VERSION} ${TORCHVISION_VERSION} ${IS_LKG_DROP} ${AIKIT_VERSION}; bash $TEST_SCRIPTS/yolov5-inference/run_test.sh ${OUTPUT_DIR}
+  cmd:
+    bash $TEST_SCRIPTS/setup.sh ${FRAMEWORK_VERSION} ${FRAMEWORK_EXTENSION_VERSION} ${TORCHVISION_VERSION} ${IS_LKG_DROP} ${AIKIT_VERSION};
+    bash $TEST_SCRIPTS/yolov5-inference/run_test.sh ${OUTPUT_DIR}
   env:
     TEST_SCRIPTS: $GITHUB_WORKSPACE/tests/cicd/IPEX-XPU
     MODEL_SCRIPTS: $GITHUB_WORKSPACE/models_v2/pytorch/yolov5/inference/gpu
