--- a/models_v2/tensorflow/resnet50v1_5/training/gpu/configure/itex_bf16.yaml
+++ b/models_v2/tensorflow/resnet50v1_5/training/gpu/configure/itex_bf16.yaml
@@ -29,46 +29,46 @@ train_dataset:
   data_dir: None
   builder: 'records'
   split: 'train'
-  one_hot: False
+  one_hot: false
   image_size: 224
   num_classes: 1000
   num_examples: 1281167
   batch_size: 256
-  use_per_replica_batch_size: True
-  mean_subtract: False
-  standardize: False
+  use_per_replica_batch_size: true
+  mean_subtract: false
+  standardize: false
   dtype: 'bfloat16'
 validation_dataset:
   name: 'imagenet2012'
   data_dir: None
   builder: 'records'
   split: 'validation'
-  one_hot: False
+  one_hot: false
   image_size: 224
   num_classes: 1000
   num_examples: 50000
   batch_size: 256
-  use_per_replica_batch_size: True
-  mean_subtract: False
-  standardize: False
+  use_per_replica_batch_size: true
+  mean_subtract: false
+  standardize: false
   dtype: 'bfloat16'
 model:
   name: 'resnet'
   model_params:
-    rescale_inputs: True
+    rescale_inputs: true
   optimizer:
     name: 'momentum'
     momentum: 0.9
     decay: 0.9
     epsilon: 0.001
     moving_average_decay: 0.
-    lookahead: False
+    lookahead: false
   loss:
     label_smoothing: 0.1
 train:
   callbacks:
-    enable_checkpoint_and_export: True
-  resume_checkpoint: True
+    enable_checkpoint_and_export: true
+  resume_checkpoint: true
   epochs: 90
 evaluation:
   epochs_between_evals: 1
